--- a/about.html
+++ b/about.html
@@ -250,7 +250,7 @@
 
       <!-- Social Icons -->
       <div class="social-icons">
-        <a href="https://www.facebook.com/tbloods23" target="_blank">
+        <a href="https://www.facebook.com/tbloodonline?mibextid=ZbWKwL" target="_blank">
           <img src="12.webp" alt="Facebook" />
         </a>
         <a href="mailto:contact@tbloods.online">
