--- a/collector.html
+++ b/collector.html
@@ -373,7 +373,7 @@
 
   <!-- Social Bar -->
   <div class="social-bar">
-    <a href="https://www.facebook.com/share/16SfCQaWCt/" target="_blank">
+    <a href="https://www.facebook.com/tbloodonline?mibextid=ZbWKwL" target="_blank">
       <i class="fab fa-facebook-f"></i>
     </a>
     <a href="mailto:contact@tbloods.online">
