--- a/join.html
+++ b/join.html
@@ -383,7 +383,7 @@
       </p>
       <div class="d-flex justify-content-center gap-4">
         <a
-          href="https://www.facebook.com/tbloods23"
+          href="https://www.facebook.com/tbloodonline?mibextid=ZbWKwL"
           target="_blank"
           aria-label="Facebook"
         >
