--- a/register.html
+++ b/register.html
@@ -334,7 +334,7 @@
 
   <!-- Social Icons -->
   <div class="social-icons">
-    <a href="https://www.facebook.com/tbloods23" target="_blank" aria-label="Facebook">
+    <a href="https://www.facebook.com/tbloodonline?mibextid=ZbWKwL" target="_blank" aria-label="Facebook">
       <img src="12.webp" alt="Facebook Icon" />
     </a>
     <a href="mailto:contact@tbloods.online" aria-label="Email">
