--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
         <h3>About Tblood</h3>
         <p>Donate blood. Save lives. Build community.</p>
         <div class="social-section">
-          <a href="https://www.facebook.com/share/16SfCQaWCt/" class="social-icon" aria-label="Facebook">
+          <a href="https://www.facebook.com/tbloodonline?mibextid=ZbWKwL" class="social-icon" aria-label="Facebook">
             <i class="fab fa-facebook-f"></i>
           </a>
 
