--- a/tblood-apk.html
+++ b/tblood-apk.html
@@ -579,7 +579,7 @@
     <footer>
         <div class="container footer-content">
             <div class="social-icons">
-                <a href="https://www.facebook.com/share/177G5DzBrZ/" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook page">
+                <a href="https://www.facebook.com/tbloodonline?mibextid=ZbWKwL" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook page">
                     <img src="12.webp" alt="Facebook">
                 </a>
                 <a href="mailto:contact@tbloods.online" target="_blank" rel="noopener noreferrer" aria-label="Contact us via email">
