--- a/index.html
+++ b/index.html
@@ -826,6 +826,25 @@
         </ul>
       </div>
       
+
+
+
+      <div class="footer-column">
+        <h3>Links</h3>
+        <ul class="footer-links">
+          <li><a href="Privacy-Policy.html">Privacy Policy</a></li>
+          <li><a href="Terms-of-Service.html">Terms of Service</a></li>
+        </ul>
+      </div>
+
+
+
+
+
+
+
+
+
       <div class="footer-column">
         <h3>Contact Us</h3>
         <ul class="contact-info">
