--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -359,7 +359,7 @@
                     <p>Your privacy is respected - we collect no data</p>
                 </div>
                 <ul class="footer-links">
-                    <li><a href="terms-of-Service.html">Terms of Service</a></li>
+                    <li><a href="Terms-of-Service.html">Terms of Service</a></li>
                     <li><a href="index.html">Home</a></li>
                 </ul>
             </div>
